map placing render sync